<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.innoventesassignment.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="36dp"
        tools:context=".views.MainActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_text_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_s_dot"
            android:textColor="#F44336"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/steps_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.8"
            android:text="@string/step_header_text"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_text_s" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_pan_number_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/pan_number"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steps_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pan_number_text_input_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_pan_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pan_number_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pan_number_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_birthdate_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/birthdate"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pan_number_text_input_layout" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_birthdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_birthdate_header">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="35"
                android:background="@drawable/rect_blue_btn"
                android:hint="@string/dd_text"
                android:inputType="number"
                android:maxLength="2"
                android:padding="12dp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="35"
                android:background="@drawable/rect_blue_btn"
                android:hint="@string/mm_text"
                android:inputType="number"
                android:maxLength="2"
                android:padding="12dp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="30"
                android:background="@drawable/rect_blue_btn"
                android:hint="@string/yyyy_text"
                android:inputType="number"
                android:maxLength="4"
                android:padding="12dp"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLearnMoreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:alpha="0.8"
            android:text="@string/txt_pan_birth_date_consent"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_birthdate" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rect_blue_btn_filled"
            android:enabled="@{viewModel.isNextButtonEnabled}"
            android:text="@string/next_text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/txtLearnMoreInfo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_no_pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/i_don_t_have_a_pan_text"
            android:textAlignment="textStart"
            android:textColor="#3F51B5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>